--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <!-- End Pricing Section -->
 
     <!-- Team-->
-    <section class="page-section bg-light" id="team">
+    <!-- <section class="page-section bg-light" id="team">
       <div class="container">
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
@@ -756,9 +756,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Clients-->
-    <div class="py-5">
+    <!-- <div class="py-5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-3 col-sm-6 my-3">
@@ -799,7 +799,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Contact-->
     <section class="page-section" id="contact">
       <div class="container">
