--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
           <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
+            
           </h3>
         </div>
         <!-- * * * * * * * * * * * * * * *-->
@@ -884,7 +884,7 @@
           <!---->
           <!-- This is what your users will see when the form-->
           <!-- has successfully submitted-->
-          <div class="d-none" id="submitSuccessMessage">
+          <!-- <div class="d-none" id="submitSuccessMessage">
             <div class="text-center text-white mb-3">
               <div class="fw-bolder">Form submission successful!</div>
               To activate this form, sign up at
@@ -893,7 +893,7 @@
                 >https://startbootstrap.com/solution/contact-forms</a
               >
             </div>
-          </div>
+          </div> -->
           <!-- Submit error message-->
           <!---->
           <!-- This is what your users will see when there is-->
