--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <a
                 class="portfolio-link"
                 data-bs-toggle="modal"
-                href="#portfolioModal6"
+                href="#portfolioModal7"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -1153,30 +1153,29 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Maim Chaim</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    Broad-Spectrum Torah Education
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/4.jpg"
+                    src="assets/img/portfolio/maim-chaim.jpg"
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    Mayim Chayim is a unique religious school. The education
+                    provided here is holistic and Torah-centered, intimately
+                    connected to all aspects of life, the child's soul, the
+                    Creator, and creation
                   </p>
                   <ul class="list-inline">
                     <li>
                       <strong>Client:</strong>
-                      Lines
+                      Main Chaim
                     </li>
                     <li>
                       <strong>Category:</strong>
-                      Branding
+                      Schools, Education, Religious
                     </li>
                   </ul>
                   <button
@@ -1212,30 +1211,29 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Omnifood</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    A healthy meal delivered to your door, every single day
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/5.jpg"
+                    src="assets/img/portfolio/Omnifood-neverCookgain.png"
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    While I was enrolled in a website development course, I got
+                    inspired to create Omnifood as a hands-on project. It was a
+                    fantastic opportunity to apply my newfound knowledge and
+                    experiment with different web design techniques.
                   </p>
                   <ul class="list-inline">
                     <li>
                       <strong>Client:</strong>
-                      Southwest
+                      Omnifood
                     </li>
                     <li>
                       <strong>Category:</strong>
-                      Website Design
+                      Website Design, Course, Food, Startup
                     </li>
                   </ul>
                   <button
@@ -1271,30 +1269,87 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Shalom Cramel</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    Exploring a shared society a gathering of voices for peace,
+                    Haifa and Beyond
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/6.jpg"
+                    src="assets/img/portfolio/ShalomCarmel.jpg"
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    Shalom Carmel was created to expose our guests the
+                    multifaceted, ethnically and culturally diverse nature of
+                    the city of Haifa and Mount Carmel.
                   </p>
                   <ul class="list-inline">
                     <li>
                       <strong>Client:</strong>
-                      Window
+                      Shalom Carmel
                     </li>
                     <li>
                       <strong>Category:</strong>
-                      Photography
+                      Tour guid, Israel
+                    </li>
+                  </ul>
+                  <button
+                    class="btn btn-primary btn-xl text-uppercase"
+                    data-bs-dismiss="modal"
+                    type="button"
+                  >
+                    <i class="fas fa-xmark me-1"></i>
+                    Close Project
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="portfolio-modal modal fade"
+      id="portfolioModal7"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-bs-dismiss="modal">
+            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          </div>
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <div class="modal-body">
+                  <!-- Project details-->
+                  <h2 class="text-uppercase">Tora Dojo Israel</h2>
+                  <p class="item-intro text-muted">
+                    This is the largest branch of Tora Dojo outside the US,
+                    founded by sixth degree black belt Arthur Gribetz.
+                  </p>
+                  <img
+                    class="img-fluid d-block mx-auto"
+                    src="assets/img/portfolio/ToraDojoIsrael.jpg"
+                    alt="..."
+                  />
+                  <p>
+                    Tora Dojo is an eclectic martial arts system. After
+                    attaining a solid background in karate, our black belts gain
+                    expertise in various martial arts styles, incorporating them
+                    into our system.
+                  </p>
+                  <ul class="list-inline">
+                    <li>
+                      <strong>Client:</strong>
+                      Tora Dojo
+                    </li>
+                    <li>
+                      <strong>Category:</strong>
+                      Martial Arts, Israel
                     </li>
                   </ul>
                   <button
