--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
         <!-- To make this form functional, sign up at-->
         <!-- https://startbootstrap.com/solution/contact-forms-->
         <!-- to get an API token!-->
-        <form id="contactForm" action="/php/contact.php">
+        <form id="contactForm" action="/php/contact.php" method="POST">
           <div class="row align-items-stretch mb-5">
             <div class="col-md-6">
               <div class="form-group">
@@ -879,38 +879,12 @@
               </div>
             </div>
           </div>
-          <!-- Submit success message-->
-          <!---->
-          <!-- This is what your users will see when the form-->
-          <!-- has successfully submitted-->
-          <div class="d-none" id="submitSuccessMessage">
-            <div class="text-center text-white mb-3">
-              <div class="fw-bolder">Form submission successful!</div>
-              To activate this form, sign up at
-              <br />
-              <a href="https://startbootstrap.com/solution/contact-forms"
-                >https://startbootstrap.com/solution/contact-forms</a
-              >
-            </div>
-          </div>
-          <!-- Submit error message-->
-          <!---->
-          <!-- This is what your users will see when there is-->
-          <!-- an error submitting the form-->
-          <div class="d-none" id="submitErrorMessage">
-            <div class="text-center text-danger mb-3">
-              Error sending message!
-            </div>
-          </div>
-          <!-- Submit Button-->
           <div class="text-center">
-            <button
-              class="btn btn-primary btn-xl text-uppercase disabled"
-              id="submitButton"
+            <input
               type="submit"
-            >
-              Send Message
-            </button>
+              value="Submit"
+              class="btn btn-primary btn-xl text-uppercase"
+            />
           </div>
         </form>
       </div>
