--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
           <h2 class="section-heading text-uppercase">Contact Us</h2>
           <h3 class="section-subheading text-muted"></h3>
         </div>
-        <form id="contactForm" action="contact.php" method="POST">
+        <form id="contactForm" action="/contact.php" method="POST">
           <div class="row align-items-stretch mb-5">
             <div class="col-md-6">
               <div class="form-group">
