idfk, trying netlify

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
           <h2 class="section-heading text-uppercase">Contact Us</h2>
           <h3 class="section-subheading text-muted"></h3>
         </div>
-        <form id="contactForm" action="" method="POST">
+        <form id="contactForm" netlify method="POST">
           <div class="row align-items-stretch mb-5">
             <div class="col-md-6">
               <div class="form-group">
@@ -870,7 +870,11 @@
             </div>
           </div>
           <div class="text-center">
-            <button type="submit"value="submit" class="btn btn-primary btn-xl text-uppercase">
+            <button
+              type="submit"
+              value="submit"
+              class="btn btn-primary btn-xl text-uppercase"
+            >
               Submit
             </button>
           </div>
