--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       id="mainNav"
     >
       <div class="container">
-        <a class="navbar-brand" href="#page-top">
+        <a class="navbar-brand" href="#">
           <img
             src="assets/img/logos/logo.png"
             alt="Logo"
@@ -70,9 +70,9 @@
               <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#price">Prices</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
@@ -470,7 +470,7 @@
 
     <!-- Price -->
     <!-- Pricing Section - Home Page -->
-    <section id="pricing" class="pricing">
+    <section id="price" class="pricing">
       <!--  Section Title -->
       <div class="container text-center section-title" data-aos="fade-up">
         <!-- <h2 class="mb-xxl-5">Pricing</h2> -->
@@ -533,7 +533,7 @@
               </ul>
 
               <div class="text-center">
-                <a href="#" class="buy-btn">Get a Price Quote</a>
+                <a href="#contact" class="buy-btn">Get a Price Quote</a>
               </div>
             </div>
           </div>
@@ -576,7 +576,7 @@
                 </li>
               </ul>
               <div class="text-center">
-                <a href="#" class="buy-btn">Get a Price Quote</a>
+                <a href="#contact" class="buy-btn">Get a Price Quote</a>
               </div>
             </div>
           </div>
@@ -639,7 +639,7 @@
                 </li>
               </ul>
               <div class="text-center">
-                <a href="#" class="buy-btn">Get a Price Quote</a>
+                <a href="#contact" class="buy-btn">Get a Price Quote</a>
               </div>
             </div>
           </div>
