--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/DanielYehuda.jpg"
-                  alt="..."
+                  alt="A screenshot of the website built for Daniel Yehuda"
                 />
               </a>
               <div class="portfolio-caption">
@@ -200,7 +200,7 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/EnterPlus.png"
-                  alt="..."
+                  alt="A screenshot of the website built for Enter Plus"
                 />
               </a>
               <div class="portfolio-caption">
@@ -227,7 +227,7 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/idftene.png"
-                  alt="..."
+                  alt="A screenshot of the website built for IDF TENE"
                 />
               </a>
               <div class="portfolio-caption">
@@ -254,7 +254,7 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/maim-chaim.jpg"
-                  alt="..."
+                  alt="A screenshot of the website built for Main Chaim"
                 />
               </a>
               <div class="portfolio-caption">
@@ -281,7 +281,7 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/Omnifood-neverCookgain.png"
-                  alt="..."
+                  alt="A screenshot of the website built for Omnifood during my course"
                 />
               </a>
               <div class="portfolio-caption">
@@ -308,7 +308,7 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/ShalomCarmel.jpg"
-                  alt="..."
+                  alt="A screenshot of the website built for Shalom Carmel"
                 />
               </a>
               <div class="portfolio-caption">
@@ -335,7 +335,7 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/ToraDojoIsrael.jpg"
-                  alt="..."
+                  alt="A screenshot of the website built for Tora Dojo Israel"
                 />
               </a>
               <div class="portfolio-caption">
@@ -349,124 +349,6 @@
         </div>
       </div>
     </section>
-    <!-- About-->
-    <!-- <section class="page-section" id="about">
-
-
-      <div class="container">
-        <div class="text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
-          </h3>
-        </div>
-        <ul class="timeline">
-          <li>
-            <div class="timeline-image">
-              <img
-                class="rounded-circle img-fluid"
-                src="assets/img/about/1.jpg"
-                alt="..."
-              />
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>2009-2011</h4>
-                <h4 class="subheading">Our Humble Beginnings</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
-                </p>
-              </div>
-            </div>
-          </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <img
-                class="rounded-circle img-fluid"
-                src="assets/img/about/2.jpg"
-                alt="..."
-              />
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>March 2011</h4>
-                <h4 class="subheading">An Agency is Born</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="timeline-image">
-              <img
-                class="rounded-circle img-fluid"
-                src="assets/img/about/3.jpg"
-                alt="..."
-              />
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>December 2015</h4>
-                <h4 class="subheading">Transition to Full Service</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
-                </p>
-              </div>
-            </div>
-          </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <img
-                class="rounded-circle img-fluid"
-                src="assets/img/about/4.jpg"
-                alt="..."
-              />
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>July 2020</h4>
-                <h4 class="subheading">Phase Two Expansion</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
-                </p>
-              </div>
-            </div>
-          </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <h4>
-                Be Part
-                <br />
-                Of Our
-                <br />
-                Story!
-              </h4>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section> -->
 
     <!-- Price -->
     <!-- Pricing Section - Home Page -->
@@ -649,158 +531,6 @@
     </section>
     <!-- End Pricing Section -->
 
-    <!-- Team-->
-    <!-- <section class="page-section bg-light" id="team">
-      <div class="container">
-        <div class="text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-          <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
-          </h3>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="team-member">
-              <img
-                class="mx-auto rounded-circle"
-                src="assets/img/team/1.jpg"
-                alt="..."
-              />
-              <h4>Parveen Anand</h4>
-              <p class="text-muted">Lead Designer</p>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Parveen Anand Twitter Profile"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Parveen Anand Facebook Profile"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Parveen Anand LinkedIn Profile"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="team-member">
-              <img
-                class="mx-auto rounded-circle"
-                src="assets/img/team/2.jpg"
-                alt="..."
-              />
-              <h4>Diana Petersen</h4>
-              <p class="text-muted">Lead Marketer</p>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Diana Petersen Twitter Profile"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Diana Petersen Facebook Profile"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Diana Petersen LinkedIn Profile"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="team-member">
-              <img
-                class="mx-auto rounded-circle"
-                src="assets/img/team/3.jpg"
-                alt="..."
-              />
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Developer</p>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker Twitter Profile"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker Facebook Profile"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker LinkedIn Profile"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-              eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam
-              corporis ea, alias ut unde.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- Clients-->
-    <!-- <div class="py-5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/microsoft.svg"
-                alt="..."
-                aria-label="Microsoft Logo"
-            /></a>
-          </div>
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/google.svg"
-                alt="..."
-                aria-label="Google Logo"
-            /></a>
-          </div>
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/facebook.svg"
-                alt="..."
-                aria-label="Facebook Logo"
-            /></a>
-          </div>
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/ibm.svg"
-                alt="..."
-                aria-label="IBM Logo"
-            /></a>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <!-- Contact-->
     <section class="page-section" id="contact">
       <div class="container">
@@ -945,7 +675,7 @@
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/DanielYehuda.jpg"
-                    alt="..."
+                    alt="A screenshot of the website built for Daniel Yehuda"
                   />
                   <p>
                     Daniel Yehuda is a multifaceted artist and performer
@@ -1006,7 +736,7 @@
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/EnterPlus.png"
-                    alt="..."
+                    alt="A screenshot of the website built for Enter Plus"
                   />
                   <p>
                     Enter Plus: Redefining Early Drowning Detection, Saving
@@ -1068,7 +798,7 @@
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/idftene.png"
-                    alt="..."
+                    alt="A screenshot of the website built for IDF TENE"
                   />
                   <p>
                     Kadatz (Pre-Military Track) Programs are educational
@@ -1126,7 +856,7 @@
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/maim-chaim.jpg"
-                    alt="..."
+                    alt="A screenshot of the website built for Maim Chaim"
                   />
                   <p>
                     Mayim Chayim is a unique religious school. The education
@@ -1184,7 +914,7 @@
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/Omnifood-neverCookgain.png"
-                    alt="..."
+                    alt="A screenshot of the website built for Omnifood for my course"
                   />
                   <p>
                     While I was enrolled in a website development course, I got
@@ -1243,7 +973,7 @@
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/ShalomCarmel.jpg"
-                    alt="..."
+                    alt="A screenshot of the website built for Shalom Carmel"
                   />
                   <p>
                     Shalom Carmel was created to expose our guests the
@@ -1300,7 +1030,7 @@
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/ToraDojoIsrael.jpg"
-                    alt="..."
+                    alt="A screenshot of the website built for Tora Dojo Israel"
                   />
                   <p>
                     Tora Dojo is an eclectic martial arts system. After
