--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </a>
 
         <button
-          class="navbar-toggler"
+          class="navbar-toggler text-light bg-secondary"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarResponsive"
