updating the magamot

--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Moshe - Sites For Everyone</title>
+    <!-- Primary Meta Tags -->
+<title>Moshe - Sites For Everyone</title>
+<meta name="title" content="Moshe - Sites For Everyone" />
+<meta name="description" content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://mosheschwartzberg.com/" />
+<meta property="og:title" content="Moshe - Sites For Everyone" />
+<meta property="og:description" content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements." />
+<meta property="og:image" content="https://mosheschwartzberg.com/assets/img/logos/logo.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://mosheschwartzberg.com/" />
+<meta property="twitter:title" content="Moshe - Sites For Everyone" />
+<meta property="twitter:description" content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements." />
+<meta property="twitter:image" content="https://mosheschwartzberg.com/assets/img/logos/logo.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/img/logos/favicon - 192.png" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
