--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">IDF tene</div>
+                <div class="portfolio-caption-heading">IDF TENE</div>
                 <div class="portfolio-caption-subheading text-muted">
                   A safe path to a successful future
                 </div>
@@ -812,7 +812,7 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">IDF tene</h2>
+                  <h2 class="text-uppercase">IDF TENE</h2>
                   <p class="item-intro text-muted">
                     The Technology and Maintenance Corps A secure path to a
                     successful future
