--- a/index.html
+++ b/index.html
@@ -10,27 +10,46 @@
     <meta name="author" content="" />
     <title>Moshe - Sites For Everyone</title>
     <!-- Primary Meta Tags -->
-<title>Moshe - Sites For Everyone</title>
-<meta name="title" content="Moshe - Sites For Everyone" />
-<meta name="description" content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements." />
+    <title>Moshe - Sites For Everyone</title>
+    <meta name="title" content="Moshe - Sites For Everyone" />
+    <meta
+      name="description"
+      content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements."
+    />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://mosheschwartzberg.com/" />
-<meta property="og:title" content="Moshe - Sites For Everyone" />
-<meta property="og:description" content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements." />
-<meta property="og:image" content="https://mosheschwartzberg.com/assets/img/logos/logo.png" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mosheschwartzberg.com/" />
+    <meta property="og:title" content="Moshe - Sites For Everyone" />
+    <meta
+      property="og:description"
+      content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements."
+    />
+    <meta
+      property="og:image"
+      content="https://mosheschwartzberg.com/assets/img/logos/logo.png"
+    />
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://mosheschwartzberg.com/" />
-<meta property="twitter:title" content="Moshe - Sites For Everyone" />
-<meta property="twitter:description" content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements." />
-<meta property="twitter:image" content="https://mosheschwartzberg.com/assets/img/logos/logo.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mosheschwartzberg.com/" />
+    <meta property="twitter:title" content="Moshe - Sites For Everyone" />
+    <meta
+      property="twitter:description"
+      content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements."
+    />
+    <meta
+      property="twitter:image"
+      content="https://mosheschwartzberg.com/assets/img/logos/logo.png"
+    />
 
-<!-- Meta Tags Generated with https://metatags.io -->
+    <!-- Meta Tags Generated with https://metatags.io -->
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="/assets/img/logos/favicon - 192.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/img/logos/favicon - 192.png"
+    />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
@@ -247,13 +266,16 @@
                 <img
                   class="img-fluid"
                   src="assets/img/portfolio/idftene.png"
-                  alt="A screenshot of the website built for IDF TENE"
+                  alt="A screenshot of the website built for IDF"
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">IDF TENE</div>
+                <div class="portfolio-caption-heading">
+                  TECHNOLOGY AND MAINTENANCE CORPS
+                </div>
                 <div class="portfolio-caption-subheading text-muted">
-                  A safe path to a successful future
+                  The Technology and Maintenance Corps A secure path to a
+                  successful future
                 </div>
               </div>
             </div>
@@ -362,6 +384,36 @@
                 <div class="portfolio-caption-heading">Tora Dojo Israel</div>
                 <div class="portfolio-caption-subheading text-muted">
                   An eclectic martial arts system
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <!-- Portfolio item 6-->
+            <div class="portfolio-item">
+              <a
+                class="portfolio-link"
+                data-bs-toggle="modal"
+                href="#portfolioModal8"
+              >
+                <div class="portfolio-hover">
+                  <div class="portfolio-hover-content">
+                    <i class="fas fa-plus fa-3x"></i>
+                  </div>
+                </div>
+                <img
+                  class="img-fluid"
+                  src="assets/img/portfolio/idftene2.0.png"
+                  alt="A screenshot of the website built for Tora Dojo Israel"
+                />
+              </a>
+              <div class="portfolio-caption">
+                <div class="portfolio-caption-heading">
+                  Technology and Maintenance Corps 2.0
+                </div>
+                <div class="portfolio-caption-subheading text-muted">
+                  The Technology and Maintenance Corps A secure path to a
+                  successful future
                 </div>
               </div>
             </div>
@@ -559,7 +611,7 @@
           <h3 class="section-subheading text-muted"></h3>
         </div>
         <!-- netlify -->
-        <form id="contactForm" action="/php/contact.php"  method="POST">
+        <form id="contactForm" action="/php/contact.php" method="POST">
           <div class="row align-items-stretch mb-5">
             <div class="col-md-6">
               <div class="form-group">
@@ -812,7 +864,9 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">IDF TENE</h2>
+                  <h2 class="text-uppercase">
+                    TECHNOLOGY AND MAINTENANCE CORPS 2.0
+                  </h2>
                   <p class="item-intro text-muted">
                     The Technology and Maintenance Corps A secure path to a
                     successful future
@@ -1068,6 +1122,66 @@
                     <li>
                       <strong>Category:</strong>
                       Martial Arts, Israel
+                    </li>
+                  </ul>
+                  <button
+                    class="btn btn-primary btn-xl text-uppercase"
+                    data-bs-dismiss="modal"
+                    type="button"
+                  >
+                    <i class="fas fa-xmark me-1"></i>
+                    Close Project
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="portfolio-modal modal fade"
+      id="portfolioModal8"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-bs-dismiss="modal">
+            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          </div>
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <div class="modal-body">
+                  <!-- Project details-->
+                  <h2 class="text-uppercase">
+                    Technology and Maintenance Corps 2.0
+                  </h2>
+                  <p class="item-intro text-muted">
+                    The Technology and Maintenance Corps A secure path to a
+                    successful future
+                  </p>
+                  <img
+                    class="img-fluid d-block mx-auto"
+                    src="assets/img/portfolio/idftene2.0.png"
+                    alt="A screenshot of the website built for the IDF"
+                  />
+                  <p>
+                    Kadatz (Pre-Military Track) Programs are educational
+                    pathways that provide significant academic preparation
+                    required by the IDF (Israel Defense Forces) candidates
+                    before their service
+                  </p>
+                  <ul class="list-inline">
+                    <li>
+                      <strong>Client:</strong>
+                      Israel Defense Force
+                    </li>
+                    <li>
+                      <strong>Category:</strong>
+                      IDF, Tech, Army
                     </li>
                   </ul>
                   <button
